--- a/view/css/app.css
+++ b/view/css/app.css
@@ -5,3 +5,8 @@
 body {
   @apply font-work-sans;
 }
+
+html{
+    max-width: 100%;
+    overflow-x: hidden;
+}
